--- a/blocks/github.prime-optimal.video.scss
+++ b/blocks/github.prime-optimal.video.scss
@@ -1,1 +1,6 @@
 /* Add your block style here */
+/* Add a color to the active/current link */
+.p {
+  background-color: #04AA6D;
+  color: white;
+}
